# Backend/src/routes/authRoutes.js
@@ -1,5 +1,6 @@
 import {Router} from 'express'
 import {authController} from '../controllers/index.js'
+import { verifyJWT } from '../middlewares/index.js';
 
 const router = Router();
 
@@ -8,5 +9,9 @@ router.post('/verify-email', authController.verifyEmail);
 router.post('/resend-verification', authController.resendEmailVerification);
 router.post('/login', authController.loginUser);
 router.post('/googleLogin', authController.googleLogin);
+router.post('/googleLogin', authController.googleLogin);
+router.get('/getLoggerDetails', verifyJWT, authController.getLoggerDetails);
+router.get('/logout', verifyJWT, authController.logoutUser);
+router.get('/refereshAccessToken', authController.refreshAccessToken);
 
 export const authRoutes = router;
